--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ApiQuanLyThuVien
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/quanlythuvien
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
