--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.servlet.session.timeout=604800m
+server.servlet.session.cookie.max-age=604800
+server.servlet.session.cookie.http-only=true
+server.servlet.session.tracking-modes=cookie
+
