--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <version>0.11.5</version>
     </dependency>
     <dependency>
+      <groupId>com.cloudinary</groupId>
+      <artifactId>cloudinary-http44</artifactId>
+      <version>1.36.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-impl</artifactId>
       <version>0.11.5</version>
