--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ server.servlet.session.cookie.max-age=604800
 server.servlet.session.cookie.http-only=true
 server.servlet.session.tracking-modes=cookie
 
+cloudinary.cloud-name=
+cloudinary.api-key=
+cloudinary.api-secret=
+
+
+
+
